--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,22 @@
 </head>
 <body>
 
-<%= yield %>
+
+  <%= render(:partial => "layouts/navbar")%>
+
+
+  <div class="container">
+    <%= render(:partial => "layouts/select")%>
+
+    <div class="row">
+      <%= render(:partial => "layouts/sidebar")%>
+
+      <div class="span9">
+        <%= yield %>
+      </div>
+
+    </div>
+  </div>
 
 </body>
 </html>
