--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,16 @@
 
 
   <div class="container">
+
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+        <a class="close" data-dismiss="alert">×</a>
+        <%= msg %>
+      </div>
+    <% end %>
+
+    <%= render(:partial => "layouts/alert")%>
+
     <%= render(:partial => "layouts/select")%>
 
     <div class="row">
