--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,10 +9,10 @@
         <a class="brand" href="#">6bey问答</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li>问题</li>
-            <li>待解决问题</li>
-            <li>联系我们</li>
-            <li>标签</li>
+            <li><a href="#">问题</a></li>
+            <li><a href="#">待解决问题</a></li>
+            <li><a href="#">联系我们</a></li>
+            <li><a href="#">标签</a></li>
           </ul>
         </div>
       </div>
