--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,31 +1,17 @@
-<div class="span3" style="background-color: #bbd8e9;">
-        <ul>
-          <li>aaaaaaaaaaa</li>
-          <ul>
-            <li>bbb</li>
-            <li>bb</li>
-            <li>bb</li>
-            <li>bb</li>
-          </ul>
-        </ul>
-        
-        <ul>
-          <li>aaaaaaaaaaa</li>
-          <ul>
-            <li>bbb</li>
-            <li>bb</li>
-            <li>bb</li>
-            <li>bb</li>
-          </ul>
-        </ul>
-        
-        <ul>
-          <li>aaaaaaaaaaa</li>
-          <ul>
-            <li>bbb</li>
-            <li>bb</li>
-            <li>bb</li>
-            <li>bb</li>
-          </ul>
-        </ul>
+<div class="span3" style="height:500px;background-color:#d1e4dc;">
+  <ul>
+    <li>
+      <% @chapters.each do |chapter|%>
+        <%= chapter.name %>
+      <% end %>
+    </li>
+
+    <ul>
+      <% @sections.each do |section|%>
+        <li><%= section.name %></li>
+      <% end %>
+
+    </ul>
+  </ul>
+
 </div>
